Import of RRWO/List-SkipList-0.32 from CPAN.
gitpan-cpan-distribution: List-SkipList
gitpan-cpan-version:      0.32
gitpan-cpan-path:         RRWO/List-SkipList-0.32.tar.gz
gitpan-cpan-author:       RRWO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,19 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         List-SkipList
-version:      0.31
-version_from: SkipList.pm
-installdirs:  site
-requires:
-    AutoLoader:                    0
-    Carp:                          0
-    Carp::Assert:                  0.17
-
+--- #YAML:1.0
+name: List-SkipList
+version: 0.32
+license: perl
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+requires:
+  Carp::Assert: 0
+  perl: 5.6.1
+recommends: {}
+build_requires: {}
+conflicts: {}
+provides:
+  List::SkipList:
+    file: lib/List/SkipList.pm
+    version: 0.32
+  List::SkipList::Node:
+    file: lib/List/SkipList.pm
+    version: 0.32
+generated_by: Module::Build version 0.20
