--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         List-SkipList
-version:      0.33
-version_from: lib/List/SkipList.pm
-installdirs:  site
+--- #YAML:1.0
+name: List-SkipList
+version: 0.40
+author:
+  - Robert Rothenberg <rrwo at cpan.org>
+abstract: Perl implementation of skip lists
+license: perl
 requires:
-    Carp::Assert:                  0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+  Carp::Assert: 0
+  perl: 5.6.1
+provides: {}
+generated_by: Module::Build version 0.24
