--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 --- #YAML:1.0
 name: List-SkipList
-version: 0.65
+version: 0.70_01
 author: Robert Rothenberg <rrwo at cpan.org>
 abstract: Perl implementation of skip lists
 license: perl
 requires:
+  Test::More: 0
   enum: 1.016
   perl: 5.6.1
 recommends:
