--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,8 @@
 --- #YAML:1.0
 name: List-SkipList
-version: 0.72
-author: Robert Rothenberg <rrwo at cpan.org>
+version: 0.73
+author:
+  - Robert Rothenberg <rrwo at cpan.org>
 abstract: Perl implementation of skip lists
 license: perl
 requires:
@@ -11,5 +12,14 @@ recommends:
   Carp::Assert: 0.17
 build_requires:
   Test::More: 0
-provides: {}
-generated_by: Module::Build version 0.25
+provides:
+  List::SkipList:
+    file: lib/List/SkipList.pm
+    version: 0.73
+  List::SkipList::Header:
+    file: lib/List/SkipList.pm
+    version: 0.73
+  List::SkipList::Node:
+    file: lib/List/SkipList.pm
+    version: 0.73
+generated_by: Module::Build version 0.25_02
